--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "ag-charts-community": "^11.1.1",
     "ag-charts-react": "^11.1.1",
     "ag-grid-community": "^33.1.1",
+    "ag-grid-enterprise": "^33.1.1",
     "ag-grid-react": "^33.1.1",
     "antd": "^5.24.3",
     "lucide-react": "^0.477.0",
